--- a/LIB_SpaceAlert/LIB_SpaceAlert.csproj
+++ b/LIB_SpaceAlert/LIB_SpaceAlert.csproj
@@ -41,13 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataTransfer.cs" />
     <Compile Include="Event.cs" />
-    <Compile Include="CommFail.cs" />
-    <Compile Include="NormalMode.cs" />
-    <Compile Include="Mission.cs" />
     <Compile Include="MissionGenerator.cs" />
-    <Compile Include="Phase.cs" />
+    <Compile Include="IncommingData.cs" />
+    <Compile Include="phase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemMessage.cs" />
     <Compile Include="Threat.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
